--- a/src/blocks/header/__navigation-list/header__navigation-list.css
+++ b/src/blocks/header/__navigation-list/header__navigation-list.css
@@ -23,7 +23,7 @@
   color: #B6BCBF;
 }
 
-.header__navigation-list:last-child{
+.header__navigation-list:nth-child(3){
   border: 1px solid #FFFFFF;
   box-sizing: border-box;
   border-radius: 100px;
@@ -39,7 +39,7 @@
     font-size: 16px;
     line-height: 1.5;
   }
-  .header__navigation-list:last-child {
+  .header__navigation-list:nth-child(3) {
     padding: 8px 15px;
     margin: 14px 40px 12px 0;
   }
