--- a/src/blocks/card/__photo/card__photo.css
+++ b/src/blocks/card/__photo/card__photo.css
@@ -1,5 +1,19 @@
 .card__photo {
   width: 100%;
+  height: 272px;
   object-position: center;
   object-fit: contain;
+  text-align: center;
+}
+
+@media screen and (max-width: 845px) {
+  .card__photo {
+    height: 150px;
+  }
+}
+
+@media screen and (max-width: 495px) {
+  .card__photo {
+    height: 196px;
+  }
 }
