--- a/src/blocks/card/__title/card__title.css
+++ b/src/blocks/card/__title/card__title.css
@@ -1,12 +1,17 @@
 .card__title {
   margin: 0 auto;
   padding: 0;
+  min-height: 70px;
   width: calc(100% - 12%);
   font-family: 'Roboto Slab', 'Helvetica Neue', Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 26px;
   line-height: 1.15;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;  
+  overflow: hidden;
   color: #1A1B22;
 }
 
