--- a/src/blocks/card/__tooltip/card__tooltip.css
+++ b/src/blocks/card/__tooltip/card__tooltip.css
@@ -8,6 +8,14 @@
   background-color: #fff;
   border: none;
   border-radius: 8px;
+  margin: 0;
+  padding: 0 16px;
+  font-family: 'Roboto', 'Helvetica Neue', Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  color: #000;
+  text-align: center;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 845px) {
