--- a/src/blocks/card/card.css
+++ b/src/blocks/card/card.css
@@ -7,4 +7,13 @@
   background-color: #fff;
   border-radius: 16px;
   overflow: hidden;
+  text-decoration: none;
+}
+
+.card:last-child {
+  max-width: 100%;
+}
+
+.card:hover {
+  cursor: url('../../images/pointer.svg'), pointer;
 }
