--- a/src/blocks/header/__navigation-list/_page/header__navigation-list_page_lk.css
+++ b/src/blocks/header/__navigation-list/_page/header__navigation-list_page_lk.css
@@ -6,7 +6,7 @@
   color: #1A1B22;
 }
 
-.header__navigation-list_page_lk:nth-child(3) {
+.header__navigation-list_page_lk:nth-last-child(3) {
   border: 1px solid #D1D2D6;
   color: #1A1B22;
 }
