--- a/src/blocks/header/__navigation-list/header__navigation-list.css
+++ b/src/blocks/header/__navigation-list/header__navigation-list.css
@@ -23,7 +23,9 @@
   color: #B6BCBF;
 }
 
-.header__navigation-list:nth-child(3){
+.header__navigation-list:nth-last-child(3) {
+  display: flex;
+  flex-direction: row;
   border: 1px solid #FFFFFF;
   box-sizing: border-box;
   border-radius: 100px;
@@ -39,7 +41,7 @@
     font-size: 16px;
     line-height: 1.5;
   }
-  .header__navigation-list:nth-child(3) {
+  .header__navigation-list:nth-last-child(3) {
     padding: 8px 15px;
     margin: 14px 40px 12px 0;
   }
@@ -47,6 +49,10 @@
 
 @media screen and (max-width: 631px) {
   .header__navigation-list {
+    display: none;
+  }
+
+  .header__navigation-list:nth-last-child(3) {
     display: none;
   }
 }
