--- a/src/blocks/mobile-menu/__button/mobile-menu__button.css
+++ b/src/blocks/mobile-menu/__button/mobile-menu__button.css
@@ -1,4 +1,8 @@
 .mobile-menu__button {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
   margin: 22px 0 24px 16px;
   padding: 0;
   width: 288px;
