--- a/src/blocks/result/result.css
+++ b/src/blocks/result/result.css
@@ -1,6 +1,6 @@
 .result {
   width: 100%;
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
   background-color: #F5F6F7;
