--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,3 +1,5 @@
 @import url(../../blocks/result/result.css);
 @import url(../../blocks/result/__title/result__title.css);
 @import url(../../blocks/result/__button/result__button.css);
+@import url(../../blocks/result/__button/_no-visible/result__button_no-visible.css);
+@import url(../../blocks/result/_visible/result_visible.css);
