--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -3,4 +3,6 @@
 @import url(../../blocks/search-form/__text/search-form__text.css);
 @import url(../../blocks/search-form/__container/search-form__container.css);
 @import url(../../blocks/search-form/__input/search-form__input.css);
-@import url(../../blocks/search-form/__submit/search-form__submit.css)
+@import url(../../blocks/search-form/__submit/search-form__submit.css);
+@import url(../../blocks/search-form/__error/search-form__error.css);
+@import url(../../blocks/search-form/__error/_visible/search-form__error_visible.css);
